--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     <main>
         <!-- category section style start  -->
-         <section class="category container">
+         <section class="category container my-5">
 
             
                 <div class="row gx-5">
@@ -187,7 +187,134 @@
         <!-- category section style end  -->
 
 
+        <!-- shoes section start  -->
+        <section class="shoes container">
+
+            <h2>Shoes</h2>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+
+                <div class="col border-0">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="shoes img">
+                    <div class="card-body">
+                      <h5 class="card-title">Supply 350</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional</p>
+                      <h3 class="mb-4">$120</h3>
+                      <a href="#" class="btn btn-primary d-flex align-items-center"><i class="fas fa-shopping-cart me-2"></i> <span> Buy Now</span> </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="shoes img">
+                    <div class="card-body">
+                      <h5 class="card-title">Nike 360</h5>
+                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content</p>
+                      <h3 class="mb-4">$99</h3>
+                      <a href="#" class="btn btn-primary d-flex align-items-center"><i class="fas fa-shopping-cart me-2"></i> <span> Buy Now</span></a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="shoes img">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Airmax</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional</p>
+                      <h3 class="mb-4">$50</h3>
+                      <a href="#" class="btn btn-primary d-flex align-items-center"><i class="fas fa-shopping-cart me-2"></i> <span> Buy Now</span></a>
+                    </div>
+                  </div>
+                </div>
+
+
+              </div>
+
+        </section>
+
+        <!-- shoes section end  -->
+
+        <!-- backpack section start  -->
+
+        <section class="backpack container my-5">
+
+            <h2 class="mb-5 mt-4">Backpack</h2>
+
+            <div class="row row-cols-1 row-cols-md-3 row-col-xl-3 g-4">
+
+                <div class="col border-0">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="./images/bags/bag-1.png" class="card-img-top" alt="backpack img">
+                    <div class="card-body">
+                      <h5 class="card-title">Red Backpack</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional</p>
+                      <h3 class="mb-4">$120</h3>
+                      <a href="#" class="btn btn-primary d-flex align-items-center justify-content-center"><i class="fas fa-shopping-cart me-2"></i> <span> Buy Now</span> </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="./images/bags/bag-2.png" class="card-img-top" alt="backpack img">
+                    <div class="card-body">
+                      <h5 class="card-title">Blue Backpack</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional</p>
+                      <h3 class="mb-4">$99</h3>
+                      <a href="#" class="btn btn-primary d-flex align-items-center justify-content-center"><i class="fas fa-shopping-cart me-2"></i> <span> Buy Now</span></a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col">
+                  <div class="card h-100 border-0 shadow-lg">
+                    <img src="./images/bags/bag-3.png" class="card-img-top" alt="backpack img">
+                    <div class="card-body">
+                      <h5 class="card-title">Black Backpack</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional</p>
+                      <h3 class="mb-4">$50</h3>
+                      <a href="#" class="btn btn-primary d-flex align-items-center justify-content-center"><i class="fas fa-shopping-cart me-2"></i> <span> Buy Now</span></a>
+                    </div>
+                  </div>
+                </div>
+
+
+              </div>
+
+        </section>
+
+        <!-- backpack section enc  -->
+
+
+        <section class="subscribe container d-flex justify-content-center panda-bg-primary rounded-3">
+            <div class="w-25 py-5">
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales, specials and more</p>
+                <input type="email" class="form-control mb-4" id="exampleFormControlInput1" placeholder="your-mail@gmail.com">
+                <button type="submit" class="btn btn-primary ">Submit</button>
+            </div>
+        </section>
+
+
+
+
+
+
     </main>
+
+        <!-- footer start  -->
+        <footer class="py-3 text-center">
+            <h6>
+                ©2020. Tanvir Ahmed. All rights reserved. Sofia, Bulgaria.
+            </h6>
+        </footer>
+        <!-- footer end -->
+
+
+ 
 
 
 
