--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda E-commerce</title>
 
+    <!-- favicon link start -->
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <!-- favicon link end -->
+
     <!-- bootstrap cdn link start  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- bootstrap cdn link end  -->
